--- a/requirements.txt
+++ b/requirements.txt
@@ -3,3 +3,4 @@ streamlit==1.21.0
 transformers==4.28.1
 --find-links https://download.pytorch.org/whl/torch_stable.html
 torch==1.7.1+cpu
+torchvision
