--- a/requirements.txt
+++ b/requirements.txt
@@ -3,4 +3,6 @@ streamlit==1.21.0
 transformers==4.28.1
 --find-links https://download.pytorch.org/whl/torch_stable.html
 torch==1.7.1+cpu
+--extra-index-url https://download.pytorch.org/whl/cpu
+torch
 torchvision
