--- a/requirements.txt
+++ b/requirements.txt
@@ -5,4 +5,4 @@ transformers==4.28.1
 torch==1.7.1+cpu
 --extra-index-url https://download.pytorch.org/whl/cpu
 torch
-torchvision
+torchvision==0.8.2+cu92
