--- a/requirements.txt
+++ b/requirements.txt
@@ -8,10 +8,10 @@ attrs==23.2.0
 Babel==2.14.0
 beautifulsoup4==4.12.3
 bleach==6.1.0
-Brotli @ file:///C:/b/abs_3d36mno480/croot/brotli-split_1714483178642/work
-certifi @ file:///C:/b/abs_35d7n66oz9/croot/certifi_1707229248467/work/certifi
+Brotli 
+certifi
 cffi==1.16.0
-charset-normalizer @ file:///tmp/build/80754af9/charset-normalizer_1630003229654/work
+charset-normalizer
 colorama==0.4.6
 comm==0.2.2
 debugpy==1.8.1
@@ -19,20 +19,20 @@ decorator==5.1.1
 defusedxml==0.7.1
 executing==2.0.1
 fastjsonschema==2.19.1
-filelock @ file:///C:/Users/dev-admin/perseverance-python-buildout/croot/filelock_1701807523603/work
+filelock 
 fqdn==1.5.1
 fsspec==2024.3.1
 h11==0.14.0
 httpcore==1.0.5
 httpx==0.27.0
-idna @ file:///C:/b/abs_aad84bnnw5/croot/idna_1714398896795/work
+idna 
 intel-openmp==2021.4.0
 ipykernel==6.29.4
 ipython==8.24.0
 ipywidgets==8.1.2
 isoduration==20.11.0
 jedi==0.19.1
-Jinja2 @ file:///C:/Users/dev-admin/perseverance-python-buildout/croot/jinja2_1707426091452/work
+Jinja2 
 json5==0.9.25
 jsonpointer==2.4
 jsonschema==4.22.0
@@ -49,27 +49,26 @@ jupyterlab==4.1.8
 jupyterlab_pygments==0.3.0
 jupyterlab_server==2.27.1
 jupyterlab_widgets==3.0.10
-MarkupSafe @ file:///C:/Users/dev-admin/perseverance-python-buildout/croot/markupsafe_1707425732791/work
+MarkupSafe
 matplotlib-inline==0.1.7
 mistune==3.0.2
 mkl==2021.4.0
-mkl-fft @ file:///C:/Users/dev-admin/perseverance-python-buildout/croot/mkl_fft_1699473528480/work
-mkl-random @ file:///C:/Users/dev-admin/perseverance-python-buildout/croot/mkl_random_1699473588250/work
+mkl-fft 
+mkl-random 
 mkl-service==2.4.0
-mpmath @ file:///C:/Users/dev-admin/perseverance-python-buildout/croot/mpmath_1699484863771/work
+mpmath 
 nbclient==0.10.0
 nbconvert==7.16.4
 nbformat==5.10.4
 nest-asyncio==1.6.0
-networkx @ file:///C:/Users/dev-admin/perseverance-python-buildout/croot/networkx_1699484973836/work
+networkx 
 notebook==7.1.3
 notebook_shim==0.2.4
-numpy @ file:///C:/b/abs_c1ywpu18ar/croot/numpy_and_numpy_base_1708638681471/work/dist/numpy-1.26.4-cp312-cp312-win_amd64.whl#sha256=becc06674317799ad0165a939a7613809d0bee9bd328a1e4308c57c39cacf08c
-overrides==7.7.0
+numpy 
 packaging==24.0
 pandocfilters==1.5.1
 parso==0.8.4
-pillow @ file:///C:/b/abs_95ls_qh4c2/croot/pillow_1714398870615/work
+pillow
 platformdirs==4.2.1
 prometheus_client==0.20.0
 prompt-toolkit==3.0.43
@@ -77,17 +76,17 @@ psutil==5.9.8
 pure-eval==0.2.2
 pycparser==2.22
 Pygments==2.17.2
-PySocks @ file:///C:/Users/dev-admin/perseverance-python-buildout/croot/pysocks_1699473336188/work
+PySocks 
 python-dateutil==2.9.0.post0
 python-json-logger==2.0.7
 pywin32==306
 pywinpty==2.0.13
-PyYAML @ file:///C:/Users/dev-admin/perseverance-python-buildout/croot/pyyaml_1699479991712/work
+PyYAML
 pyzmq==26.0.3
 qtconsole==5.5.1
 QtPy==2.4.1
 referencing==0.35.1
-requests @ file:///C:/b/abs_474vaa3x9e/croot/requests_1707355619957/work
+requests
 rfc3339-validator==0.1.4
 rfc3986-validator==0.1.1
 rpds-py==0.18.0
@@ -97,7 +96,7 @@ six==1.16.0
 sniffio==1.3.1
 soupsieve==2.5
 stack-data==0.6.3
-sympy @ file:///C:/b/abs_82njkonm7f/croot/sympy_1701397685028/work
+sympy
 tbb==2021.12.0
 terminado==0.18.1
 tinycss2==1.3.0
@@ -107,13 +106,13 @@ torchvision==0.18.0
 tornado==6.4
 traitlets==5.14.3
 types-python-dateutil==2.9.0.20240316
-typing_extensions @ file:///C:/b/abs_23uoivfoy8/croot/typing_extensions_1705619982210/work
+typing_extensions
 uri-template==1.3.0
-urllib3 @ file:///C:/b/abs_4etpfrkumr/croot/urllib3_1707770616184/work
+urllib3 
 wcwidth==0.2.13
 webcolors==1.13
 webencodings==0.5.1
 websocket-client==1.8.0
 wheel==0.41.2
 widgetsnbextension==4.0.10
-win-inet-pton @ file:///C:/Users/dev-admin/perseverance-python-buildout/croot/win_inet_pton_1699472992992/work
+win-inet-pton 
