--- a/requirements.txt
+++ b/requirements.txt
@@ -9,9 +9,9 @@ Babel==2.14.0
 beautifulsoup4==4.12.3
 bleach==6.1.0
 Brotli 
-certifi
+certifi 
 cffi==1.16.0
-charset-normalizer
+charset-normalizer 
 colorama==0.4.6
 comm==0.2.2
 debugpy==1.8.1
@@ -49,7 +49,7 @@ jupyterlab==4.1.8
 jupyterlab_pygments==0.3.0
 jupyterlab_server==2.27.1
 jupyterlab_widgets==3.0.10
-MarkupSafe
+MarkupSafe 
 matplotlib-inline==0.1.7
 mistune==3.0.2
 mkl==2021.4.0
@@ -65,10 +65,11 @@ networkx
 notebook==7.1.3
 notebook_shim==0.2.4
 numpy 
+overrides==7.7.0
 packaging==24.0
 pandocfilters==1.5.1
 parso==0.8.4
-pillow
+pillow 
 platformdirs==4.2.1
 prometheus_client==0.20.0
 prompt-toolkit==3.0.43
@@ -81,12 +82,12 @@ python-dateutil==2.9.0.post0
 python-json-logger==2.0.7
 pywin32==306
 pywinpty==2.0.13
-PyYAML
+PyYAML 
 pyzmq==26.0.3
 qtconsole==5.5.1
 QtPy==2.4.1
 referencing==0.35.1
-requests
+requests 
 rfc3339-validator==0.1.4
 rfc3986-validator==0.1.1
 rpds-py==0.18.0
@@ -96,7 +97,7 @@ six==1.16.0
 sniffio==1.3.1
 soupsieve==2.5
 stack-data==0.6.3
-sympy
+sympy 
 tbb==2021.12.0
 terminado==0.18.1
 tinycss2==1.3.0
@@ -106,7 +107,7 @@ torchvision==0.18.0
 tornado==6.4
 traitlets==5.14.3
 types-python-dateutil==2.9.0.20240316
-typing_extensions
+typing_extensions 
 uri-template==1.3.0
 urllib3 
 wcwidth==0.2.13
