--- a/requirements.txt
+++ b/requirements.txt
@@ -80,8 +80,8 @@ Pygments==2.17.2
 PySocks 
 python-dateutil==2.9.0.post0
 python-json-logger==2.0.7
-pywin32==306
-pywinpty==2.0.13
+pywin32
+pywinpty
 PyYAML 
 pyzmq==26.0.3
 qtconsole==5.5.1
