--- a/requirements.txt
+++ b/requirements.txt
@@ -103,6 +103,7 @@ torch==2.3.0
 torchaudio==2.3.0
 torchvision==0.18.0
 tornado==6.4
+transformers
 traitlets==5.14.3
 types-python-dateutil==2.9.0.20240316
 typing_extensions 
